# rust-poke-api

./: Cargo.toml
src/: hello.rs  main.rs  pokedex.rs
src/models/: Pokemon.rs  mod.rs
