[package]
name = "rust-poke-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
futures = "0.3.25"
serde = "1.0.152"
serde_json = "1.0.91"
env_logger = "0.10.0"
mongodb = "2.3.0"